--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.17.0",
     "lucide-react": "^0.471.1",
+    "motion": "^11.17.0",
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.4.0",
     "salutegroup-case": "file:",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
