--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.4",
     "@reduxjs/toolkit": "^2.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "framer-motion": "^11.17.0",
     "lucide-react": "^0.471.1",
     "motion": "^11.17.0",
     "next": "14.2.16",
     "react": "^18",
+    "react-datepicker": "^7.6.0",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
